Added button for grid style

--- a/ui/dataviewerwindow.ui
+++ b/ui/dataviewerwindow.ui
@@ -245,6 +245,32 @@ border: 1px solid white;
        </widget>
       </item>
       <item>
+       <widget class="QToolButton" name="buttonGridStyle">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="toolTip">
+         <string>Grid Style</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../resources/images.qrc">
+          <normaloff>:/icons/grid_icon.png</normaloff>:/icons/grid_icon.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>22</width>
+          <height>22</height>
+         </size>
+        </property>
+        <property name="popupMode">
+         <enum>QToolButton::InstantPopup</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_4">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
